--- a/css/_gallery.scss
+++ b/css/_gallery.scss
@@ -1,6 +1,7 @@
 .gallery__wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 0.5rem;
 }
 .gallery__container {
   display: flex;
