--- a/css/styles.css
+++ b/css/styles.css
@@ -277,6 +277,7 @@ body {
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
+  gap: 0.5rem;
 }
 
 .gallery__container {
