--- a/css/styles.css
+++ b/css/styles.css
@@ -277,7 +277,6 @@ body {
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  gap: 0.5rem;
 }
 
 .gallery__container {
@@ -287,6 +286,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  border: 0.5 solid white;
 }
 
 .gallery__container img {
@@ -351,7 +351,6 @@ body {
   .gallery__wrapper {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    gap: 0.5rem;
   }
   .element-content h1 {
     top: 15%;
@@ -395,24 +394,42 @@ body {
   .gallery__wrapper {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    gap: 0.5rem;
   }
   .element-content h1 {
     font-size: 4rem;
+    top: 25%;
+    left: 25%;
   }
   .element-content h2 {
-    top: 36%;
+    top: 41%;
     left: 50%;
-    font-size: 1.8rem;
+    font-size: 2.5rem;
   }
   .element-content ul {
-    top: 42%;
-    left: 53%;
-    font-size: 1.8rem;
+    top: 46%;
+    left: 57%;
+    font-size: 2.2rem;
   }
   .element-logo {
-    top: 53%;
-    left: 63%;
+    top: 51%;
+    left: 45%;
+  }
+  .element-logo img {
+    width: 20rem;
+    height: 20rem;
+  }
+  .main__header {
+    -webkit-clip-path: circle(50% at 50% 50%);
+            clip-path: circle(50% at 50% 50%);
+  }
+  .input {
+    background-image: linear-gradient(255deg, #ffce00 49.1%, #fff 0%);
+  }
+  .input-1 {
+    background-image: linear-gradient(255deg, #ffce00 44.9%, #fff 0%);
+  }
+  textarea {
+    background-image: linear-gradient(255deg, #ffce00 39.9%, #fff 6%);
   }
 }
 /*# sourceMappingURL=styles.css.map */
